<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/buttonColor"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/gothicbold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:shadowRadius="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow>
                <TextView
                    android:id="@+id/amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:fontFamily="@font/gothicbold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/amounthint"
                    android:fontFamily="@font/centurygothicnormal"
                    android:ems="13"
                    android:textColorHint="#601c2330"
                    android:inputType="number"
                    android:textColor="@color/textcolor"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interest"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:fontFamily="@font/gothicbold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/interesthint"
                    android:fontFamily="@font/centurygothicnormal"
                    android:ems="13"
                    android:textColorHint="#601c2330"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/periodhint"
                    android:fontFamily="@font/centurygothicnormal"
                    android:layout_weight="1"
                    android:textColorHint="#601c2330"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:id="@+id/radioOption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/textcolor"
                        android:buttonTint="@color/textcolor"
                        android:fontFamily="@font/centurygothicnormal"
                        android:checked="true"
                        android:text="@string/radioyear" />

                    <RadioButton
                        android:id="@+id/radioOption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/textcolor"
                        android:buttonTint="@color/textcolor"
                        android:fontFamily="@font/centurygothicnormal"
                        android:text="@string/radiomonth" />

                </RadioGroup>
            </TableRow>

            <TableRow>
                <View
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="10" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:textColor="@color/white"
                    android:shadowRadius="5"
                    android:text="@string/calculatetext"
                    android:fontFamily="@font/gothicbold"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="10" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow>
                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/warningMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/warning"
                    android:textSize="13sp"
                    android:textColor="@color/red"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/monthlyEMI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/monthlyEMI"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/table_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/monthlyemioutput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/monthlyEMIValue"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/table_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/totalInterest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/totalinterest"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/table_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalInterestOutput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/totalInterestValue"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/table_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/totalPayment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/totalpayment"
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/gothicbold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/table_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalPaymentOutput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/table_border"
                    android:fontFamily="@font/gothicbold"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/totalPaymentValue"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>